<resources>
    <string name="app_name">INTI Bot-Buddy Admin</string>
    <string name="input_userID">User ID</string>
    <string name="button_login">Enter</string>
    <string name="input_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_firstTimeLogin">First Time Login</string>
    <string name="tooltipText_firstTimeLogin">password: same as your user ID</string>
    <string name="text_mainMenu">MAIN MENU</string>
    <string name="button_safetyHealthEmergency">Safety/Health/Emergency</string>
    <string name="button_academicINTI">Academic/INTI</string>
    <string name="button_transportationServices">Transportation/Services</string>
    <string name="button_facilitiesLocations">Facilities/Locations</string>
    <string name="button_contacts">Contacts</string>
    <string name="button_activities">Co-curricular Activities</string>
    <string name="button_helpdesksOtherEnquiries">Helpdesks/Other Enquiries</string>
    <string name="button_wifiInternet">WiFi/Internet</string>
    <string name="button_extraInfo">Extra Information ;)</string>
    <string name="text_extraInfo">Extra Information</string>
    <string name="text_settings">Settings</string>
    <string name="text_changeDefaultPassword">Change Default Password</string>
    <string name="text_currentPassword">Current Password: </string>
    <string name="text_newPassword">New Password: </string>
    <string name="text_confirmNewPassword">Confirm New Password: </string>
    <string name="button_save">Save</string>
    <string name="input_enterCurrentPassword">Enter Current Password</string>
    <string name="input_enterNewPassword">Enter New Password</string>
    <string name="input_enterNewPasswordAgain">Enter New Password Again</string>
    <string name="action_settings">Settings</string>
    <string name="pass_username">username</string>
    <string name="option_injuredUnwell">Injured? Not feeling well? Try&#8230;</string>
    <string name="option_emergency">EMERGENCY</string>
    <string name="option_counselling">Counselling</string>
    <string name="option_getInTouch">Getting in Touch</string>
    <string name="option_INTIwebsites">INTI Websites</string>
    <string name="option_INTIsocial">INTI\'s Social Media</string>
    <string name="option_INTIacademicWebsitesRes">INTI\'s Academic Websites &amp; Resources</string>
    <string name="option_INTIMAfacebook">INTIMA Students Platform on Facebook</string>
    <string name="option_providedByINTI">Provided by INTI</string>
    <string name="option_nonINTI">Non INTI</string>
    <string name="option_whereToWaitForBus">Where do I wait for the bus?</string>
    <string name="option_general">General</string>
    <string name="option_academicBlock">Academic Block</string>
    <string name="option_hostel">Hostel Area</string>
    <string name="option_sportsRecreational">Sports &amp; Recreational</string>
    <string name="option_departmentsAcademicBlock">Departments - Academic Block</string>
    <string name="option_departmentsHostel">Departments - Hostel Area</string>
    <string name="option_others">Others/Outside INTI</string>
    <string name="option_sports">Sports</string>
    <string name="option_clubsSocieties">Clubs &amp; Societies</string>
    <string name="option_events">Events</string>
    <string name="option_IThelpdesk">IT Helpdesk for Students</string>
    <string name="option_AFMhelpdesk">AFM Helpdesk for Students</string>
    <string name="option_onlineSuggestion">INTI IU Online Suggestion Box</string>
    <string name="option_makeEnquiry">Make an Enquiry to INTI IU</string>
    <string name="option_INTIStudentWifi">INTI-Student WiFi</string>
    <string name="option_nearbyMalls">Nearby Malls</string>
    <string name="action_logout">Logout</string>
    <string name="text_logout">Logout</string>
    <string name="pass_connection">connection</string>
    <string name="sp_preferenceName">preferenceName</string>
    <string name="checkbox_rememberMe">Keep me logged in</string>
    <string name="save_username">save username</string>
    <string name="save_password">save password</string>
    <string name="save_usernamePassword">save username and password</string>
    <string name="save_rememberMe">save remember me</string>
    <string name="option_INTIBusShuttleService">INTI Bus Shuttle Service</string>
    <string name="option_localBusShuttleService">Local Bus Shuttle Service - Nilai</string>
    <string name="option_taxiService">Taxi Service</string>
    <string name="option_otherOptions">Other options</string>
    <string name="text_operatingHours">Operating Hours:</string>
    <string name="text_contact">Contact:</string>
    <string name="text_location">Location:</string>
    <string name="text_busRoute">Bus Route:</string>
    <string name="text_website">Website:</string>
    <string name="text_desc">Description:</string>
    <string name="text_directionsMap">Directions/Map:</string>
    <string name="text_clubInInti">Club in INTI:</string>
    <string name="text_date">Date:</string>
    <string name="text_venue">Venue:</string>
    <string name="text_time">Time:</string>
    <string name="tooltipText_saveChanges">Save Changes</string>
    <string name="tooltipText_safety">Emergencies OR To help you feel better</string>
    <string name="tooltipText_academic">INTI\'s info and its useful links</string>
    <string name="tooltipText_transportation">Help you find ways to move around Nilai</string>
    <string name="tooltipText_facilities">All the places you can go/use around INTI IU, Nilai</string>
    <string name="tooltipText_contacts">Who are you looking for?</string>
    <string name="tooltipText_coCu">Get involved!</string>
    <string name="tooltipText_helpdesks">Help, suggest, enquire</string>
    <string name="tooltipText_wifi">Trying to connect?</string>
    <string name="tooltipText_extraInfo">Let me try to help you more!</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="text_title">Title:</string>
    <string name="input_title">Title</string>
    <string name="input_operatingHours">Operating hours</string>
    <string name="input_contact">Contact</string>
    <string name="input_location">Location</string>
    <string name="text_newTitle">New Title:</string>
    <string name="text_newOperatingHours">New Operating\nHours:</string>
    <string name="text_newContact">New Contact:</string>
    <string name="text_newLocation">New Location:</string>
    <string name="button_add">Confirm</string>
    <string name="button_edit">Update</string>
    <string name="button_delete">Yep, I am sure</string>
    <string name="input_newTitle">New Title</string>
    <string name="input_newOperatingHours">New Operating hours</string>
    <string name="input_newContact">New Contact</string>
    <string name="input_newLocation">New Location</string>
</resources>
