<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_background"
    tools:context="com.example.intibotbuddy_admin.Main2Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_mainMenu"
        android:textColor="@color/light_blue_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/safetyButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="safety"
        android:text="@string/button_safetyHealthEmergency"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_safety"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/academicButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="academic"
        android:text="@string/button_academicINTI"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_academic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safetyButton" />

    <Button
        android:id="@+id/transportButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="transportation"
        android:text="@string/button_transportationServices"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_transportation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/academicButton"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/faciButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="facilities"
        android:text="@string/button_facilitiesLocations"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_facilities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transportButton"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/contactsButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="contacts"
        android:text="@string/button_contacts"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_contacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faciButton"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/activitiesButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="activities"
        android:text="@string/button_activities"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_coCu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactsButton"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/helpdesksButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="helpdesks"
        android:text="@string/button_helpdesksOtherEnquiries"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_helpdesks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activitiesButton"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/wifiButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="wifi"
        android:text="@string/button_wifiInternet"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_wifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpdesksButton"
        tools:textAllCaps="false" />

    <Button
        android:id="@+id/extraInfoButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="extraInfo"
        android:text="@string/button_extraInfo"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:tooltipText="@string/tooltipText_extraInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifiButton"
        tools:textAllCaps="false" />

</android.support.constraint.ConstraintLayout>
