<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/action_add"
        android:tooltipText="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"
        android:tooltipText="@string/action_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        android:tooltipText="@string/action_delete"
        app:showAsAction="ifRoom" />

</menu>