<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditInjuredActivity">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/action_edit"
        android:textColor="@color/dark_blue_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/text_newTitle"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_newOperatingHours"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_newContact"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_newLocation"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <EditText
        android:id="@+id/injuredNewTitleET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newTitle"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/injuredNewOperatingHoursET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newOperatingHours"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView32"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/injuredNewContactET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newContact"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView33"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/injuredNewLocationET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newLocation"
        android:inputType="textCapSentences|textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="edit"
        android:text="@string/button_edit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:tooltipText="@string/action_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/injuredNewLocationET" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_title"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/injuredTitleETedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_title"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView40"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>