<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCounsellingActivity">

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/action_edit"
        android:textColor="@color/dark_blue_text"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_title"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/text_newTitle"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_newOperatingHours"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_newContact"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/text_newLocation"
        android:textColor="@color/dark_blue_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51" />

    <EditText
        android:id="@+id/counselTitleETedit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_title"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/counselNewTitleET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newTitle"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView49"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/counselNewOperatingHoursET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newOperatingHours"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/counselNewContactET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newContact"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/counselNewLocationET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/input_newLocation"
        android:inputType="textCapSentences|textMultiLine|textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView52"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/cyan_button"
        android:onClick="edit"
        android:text="@string/button_edit"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:tooltipText="@string/action_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counselNewLocationET" />
</android.support.constraint.ConstraintLayout>